package ar.edu.uba.fi;

public class Patente {
    public Patente(String dominioLetra, int dominioNumero) {
    }
}
