package ar.edu.uba.fi.herencia;

public class PlazaBasica extends TipoPlaza {

    public PlazaBasica() {
        super(100);
    }
}

