package ar.edu.uba.fi.herencia;

public class PlazaPremium extends TipoPlaza {

    public PlazaPremium() {
        super(150);
    }

}
