 @startuml

class Agencia {

        + registrar(Vehiculo)
        + alquiarDias(unaPatente, unosDias)
}

abstract class  Vehiculo {
        + sos(Patente)
        + {abstract} alquilarDias(unosDias)
}

class TipoPlaza {
    - int precioPlaza

    + TipoPlaza(int precioPlaza)
    + alquilar(Integer numeroPlazas) : double
}

class PlazaBasica {

    + PlazaBasica(int precioPlaza)
}

class PlazaPremium {

    + PlazaPremium(int precioPlaza)
}
class Auto {
        - modelo

        + patente(Patente)
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Camion {
        - pma

        + patente(Patente)
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Bus {
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Patente {
        - valor

        + equals(otraPatente)
}

Vehiculo *- Patente

Agencia o- "0..*" Vehiculo

Vehiculo <|-- Auto
Vehiculo <|-- Camion
Vehiculo <|-- Bus

Auto *-- TipoPlaza

TipoPlaza <|-- PlazaPremium
TipoPlaza <|-- PlazaBasica
@enduml
